Archive2/57/a496c47639304b/output
main.cpp:7:5: error: static_assert failed "i"
    static_assert(std::is_reference<decltype(i)>::value, "i");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
